--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "png.js"]
-	path = png.js
-	url = git://github.com/devongovett/png.js.git
+[submodule "vendor/zlibstat.js"]
+	path = vendor/zlibstat.js
+	url = git@github.com:imaya/zlibstat.js.git
